--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.9"
+    "@tailwindcss/forms": "^0.5.9",
+    "axios": "1.12.2",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1"
   }
 }
